log_output/manifests-gke/log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-generator
          image: msami936/log-output:3.2
          imagePullPolicy: Always
          command: ["node", "generator.js"]
          volumeMounts:
            - name: shared-log
              mountPath: /shared
        - name: log-reader
          image: msami936/log-output:3.2
          imagePullPolicy: Always
          command: ["node", "reader.js"]
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          volumeMounts:
            - name: shared-log
              mountPath: /shared
            - name: log-output-config
              mountPath: /config
              readOnly: true
      volumes:
        - name: shared-log
          emptyDir: {}
        - name: log-output-config
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
---
apiVersion: v1
kind: Service
metadata:
  name: log-output
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
